install/kubernetes-templates/deployment-postgres.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "1"
    objectset.rio.cattle.io/applied: H4sIAAAAAAAA/8RUTY/bNhD9LwP0Jnlly94P3YoNti2QBEZ200vRw4gc2exSJDEzctYw9N8L2mvFQRdBDw16svk48zzvzaMPgMn9TiwuBmgAU5Kr3RwKeHbBQgPvKPm47ykoFNCTokVFaA6AIURFdTFIPsb2LzIqpDN2cWZQ1dPMxSuXSarOWry+prK7MW25XFWmbNuuKm/tgqolGly1cxgL8NiS/y7dFmULDZi76g7rtqb5arG8q1dmWd+aVbvobuzN4qaa3y46S6vuFgr4EvnZR7SzQYgvmM64kCejkV/Fz+wkuIyJAqpHKVMU3TBJHjJgT9DABJ0QSWgyPPXkUklksprEMZfKO0LrXaBHMjFYgea6qgpgSt4ZFGjm+bBzeRe/OtHI+/eudwrNvCrg66AH6FHN9v3k1n+sMU+ujEqbfWbn6L0Lm8/JotLp118eB95kuYvVTzkX+PI [...]
    objectset.rio.cattle.io/id: 0fdda66e-f7cb-450c-bbf0-8d2e04aca5b1
  creationTimestamp: "2023-01-23T16:21:48Z"
  generation: 1
  labels:
    objectset.rio.cattle.io/hash: c909a3b3e1524935c438c5b2f7d7270182fde5f8
    workload.user.cattle.io/workloadselector: apps.deployment-openatlas-postgres
  name: postgres
  namespace: openatlas
  resourceVersion: "75184096"
  uid: 2695265b-8233-4885-9a4d-4f47fe2af004
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      workload.user.cattle.io/workloadselector: apps.deployment-openatlas-postgres
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        workload.user.cattle.io/workloadselector: apps.deployment-openatlas-postgres
    spec:
      affinity: {}
      containers:
      - envFrom:
        - configMapRef:
            name: postgres
            optional: false
        - secretRef:
            name: postgres
            optional: false
        image: postgis/postgis:13-3.3
        imagePullPolicy: IfNotPresent
        livenessProbe:
          failureThreshold: 3
          periodSeconds: 10
          successThreshold: 1
          tcpSocket:
            port: 5432
          timeoutSeconds: 1
        name: postgres
        ports:
        - containerPort: 5432
          name: postgres
          protocol: TCP
        readinessProbe:
          failureThreshold: 3
          periodSeconds: 10
          successThreshold: 1
          tcpSocket:
            port: 5432
          timeoutSeconds: 1
        resources: {}
        startupProbe:
          failureThreshold: 6
          periodSeconds: 10
          successThreshold: 1
          tcpSocket:
            port: 5432
          timeoutSeconds: 1
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
status:
  availableReplicas: 1
  conditions:
  - lastTransitionTime: "2023-01-23T16:21:48Z"
    lastUpdateTime: "2023-01-23T16:22:12Z"
    message: ReplicaSet "postgres-7745c99cd7" has successfully progressed.
    reason: NewReplicaSetAvailable
    status: "True"
    type: Progressing
  - lastTransitionTime: "2023-01-26T16:14:11Z"
    lastUpdateTime: "2023-01-26T16:14:11Z"
    message: Deployment has minimum availability.
    reason: MinimumReplicasAvailable
    status: "True"
    type: Available
  observedGeneration: 1
  readyReplicas: 1
  replicas: 1
  updatedReplicas: 1
