install/kubernetes-templates/ingress-openatlas.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    field.cattle.io/publicEndpoints: '[{"addresses":["10.3.6.61","10.3.6.63","10.3.6.65"],"port":80,"protocol":"HTTP","serviceName":"openatlas:openatlas","ingressName":"openatlas:openatlas","hostname":"openatlas.acdh-cluster-2.arz.oeaw.ac.at","path":"/","allNodes":false}]'
    objectset.rio.cattle.io/applied: H4sIAAAAAAAA/3yQsW7jMAyG34WzrdiODct6g9tuONxyuIGSmFi1IwkSk7Q1/O6FkqUFigIaxJ/k95PcAKP7Sym74EGBJ76HtDh/FovMwoXDrYUKFuctKPjlz4lyhgouxGiREdQG6H1gZBd8LmHQL2Q4E4vkgjDIvFIBuUJA0/bU26nWwyTrnsjWEvWxNpI6PWpqcNSwV7CipvVH3Ix5BgVGT0dju7Y1cjC2wVPX6b61U4tjK21/olEP2A+yQD1eCBSESB55xbJHkXJE81XfK8iRTLFP15UyqH8bzCHz5yqBxs61Wa+ZKdWdwPQuAuFdoBHIUMHMHAsiIs9PhEazULnkBpnSzRXb7buxYkj8SF0vmhIo2chm3/fqwQIFB3h+/7zF0vo70cm9wv5/L+8jAAD//9dl+YrTAQAA
    objectset.rio.cattle.io/id: ac14e4d9-b598-4eed-8ab3-c8e2b7be0a7b
  creationTimestamp: "2023-01-23T16:34:22Z"
  generation: 1
  labels:
    objectset.rio.cattle.io/hash: cb93cd211c85cd0af22b41d91a718d4fe7b5a458
  name: openatlas
  namespace: openatlas
  resourceVersion: "75186232"
  uid: 3b5cf4ee-7917-4737-bd3d-a69c0fcac158
spec:
  rules:
  - host: openatlas.acdh-cluster-2.arz.oeaw.ac.at
    http:
      paths:
      - backend:
          service:
            name: openatlas
            port:
              number: 8080
        path: /
        pathType: Prefix
status:
  loadBalancer:
    ingress:
    - ip: 10.3.6.61
    - ip: 10.3.6.63
    - ip: 10.3.6.65
