install/kubernetes-templates/openatlas-complete.yaml
---
apiVersion: v1
data:
  POSTGRES_PASSWORD: dmVyeXNlY3JldA==
  POSTGRES_USER: b3BlbmF0bGFz
kind: Secret
metadata:
  name: postgres
type: Opaque
---
apiVersion: v1
data:
  POSTGRES_DB: openatlas_test
kind: ConfigMap
metadata:
  name: postgres
---
apiVersion: v1
kind: Service
metadata:
  name: openatlas
spec:
  clusterIP: 10.43.154.161
  clusterIPs:
  - 10.43.154.161
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - name: http
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    workload.user.cattle.io/workloadselector: apps.deployment-openatlas-openatlas
  sessionAffinity: None
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: postgres
spec:
  clusterIP: 10.43.76.150
  clusterIPs:
  - 10.43.76.150
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - name: postgres
    port: 5432
    protocol: TCP
    targetPort: 5432
  selector:
    workload.user.cattle.io/workloadselector: apps.deployment-openatlas-postgres
  sessionAffinity: None
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    workload.user.cattle.io/workloadselector: apps.deployment-openatlas-openatlas
  name: openatlas
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      workload.user.cattle.io/workloadselector: apps.deployment-openatlas-openatlas
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        workload.user.cattle.io/workloadselector: apps.deployment-openatlas-openatlas
    spec:
      affinity: {}
      containers:
      - env:
        - name: POSTGRES_HOST
          value: postgres
        - name: OVERWRITE_DATABASE
          value: "TRUE"
        envFrom:
        - configMapRef:
            name: postgres
            optional: false
        - secretRef:
            name: postgres
            optional: false
        image: ghcr.io/acdh-oeaw/openatlas/container-preview:2611a64
        imagePullPolicy: IfNotPresent
        livenessProbe:
          failureThreshold: 3
          httpGet:
            path: /
            port: 8080
            scheme: HTTP
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 1
        name: openatlas
        ports:
        - containerPort: 8080
          name: http
          protocol: TCP
        readinessProbe:
          failureThreshold: 3
          httpGet:
            path: /
            port: 8080
            scheme: HTTP
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 1
        resources: {}
        startupProbe:
          failureThreshold: 3
          httpGet:
            path: /
            port: 8080
            scheme: HTTP
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 1
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    workload.user.cattle.io/workloadselector: apps.deployment-openatlas-postgres
  name: postgres
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      workload.user.cattle.io/workloadselector: apps.deployment-openatlas-postgres
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        workload.user.cattle.io/workloadselector: apps.deployment-openatlas-postgres
    spec:
      affinity: {}
      containers:
      - envFrom:
        - configMapRef:
            name: postgres
            optional: false
        - secretRef:
            name: postgres
            optional: false
        image: postgis/postgis:13-3.3
        imagePullPolicy: IfNotPresent
        livenessProbe:
          failureThreshold: 3
          periodSeconds: 10
          successThreshold: 1
          tcpSocket:
            port: 5432
          timeoutSeconds: 1
        name: postgres
        ports:
        - containerPort: 5432
          name: postgres
          protocol: TCP
        readinessProbe:
          failureThreshold: 3
          periodSeconds: 10
          successThreshold: 1
          tcpSocket:
            port: 5432
          timeoutSeconds: 1
        resources: {}
        startupProbe:
          failureThreshold: 6
          periodSeconds: 10
          successThreshold: 1
          tcpSocket:
            port: 5432
          timeoutSeconds: 1
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: openatlas
spec:
  rules:
  - host: openatlas.acdh-cluster-2.arz.oeaw.ac.at
    http:
      paths:
      - backend:
          service:
            name: openatlas
            port:
              number: 8080
        path: /
        pathType: Prefix
---
